--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -18,8 +18,9 @@
                 <div class="card-body">
                     <h4 class="card-title"><%= article.title %></h4>
                     <div class="card-subtitle text-muted mb-2">
-                        <%= article.createdAt %>
+                      <%= article.createdAt.toLocaleDateString ()%>
                     </div>
+                    <div class="card-text mb-2"><%= article.description %></div>
                 </div>
             </div>
         <% }) %>
