--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -10,11 +10,18 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4">New Article</h1>
+        <h1 class="mb-1"><%= article.title %></h1>
+        <div class="text-muted mb-2">
+            <%= article.createdAt.tolacaleDateString() %>
+        </div>
+        <a href="/" class="btn btn-secondary">All Articles</a>
+        <a href="/articles/edit/ <% article.id %>" 
+        class="btn btn-secondary">Edit</a>
 
-        <form action="/articles" method="POST">
-            <%- include('_form_fields') %>
-        </form>
+        <div>
+        <%= article.markdown %>
+        </div>
+    
      </div>
 </body>
 </html>
