--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1 class= "mb-4">LIVE, LOVE, TRAVEL...</h1>
-        <a href="/articles/new" class="btn btn-success">Nigeria</a>
+        <a href="/articles/new" class="btn btn-success">Add Entry</a>
 
         <% articles.forEach(article => { %>
             <div class="card mt-4">
@@ -21,7 +21,10 @@
                       <%= article.createdAt.toLocaleDateString ()%>
                     </div>
                     <div class="card-text mb-2"><%= article.description %></div>
-                    <a href="article/<%= article.id %>" class="btn btn-primary">Read More</a>
+                    <a href="article/<%= article.id %>" class="btn btn-primary">Read More </a>
+                    <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
                 </div>
             </div>
         <% }) %>
