--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -12,11 +12,12 @@
     <div class="container">
         <h1 class="mb-1"><%= article.title %></h1>
         <div class="text-muted mb-2">
-            <%= article.createdAt.tolacaleDateString() %>
+            
         </div>
         <a href="/" class="btn btn-secondary">All Articles</a>
-        <a href="/articles/edit/ <% article.id %>" 
-        class="btn btn-secondary">Edit</a>
+        <a href="/articles/new" class="btn btn-success">Edit</a>
+     
+
 
         <div>
         <%= article.markdown %>
