--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Demi's Travel Blog</title>
+    <title>Daily Fitness Summary</title>
 </head>
 <body>
     <div class="container">
@@ -14,8 +14,8 @@
         <div class="text-muted mb-2">
             
         </div>
-        <a href="/" class="btn btn-secondary">All Articles</a>
-        <a href="/articles/new" class="btn btn-success">Edit</a>
+        <a href="/" class="btn btn-primary">All Stats</a>
+        <a href="/articles/_form_fields" class="btn btn-primary">Edit</a>
      
 
 
