--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -1,14 +1,15 @@
 <div class="form-group">
-    <label for="title">Title</label>
+    <label for="title">What is your daily goal?</label>
     <input required value="<%=article.title%>" type="text" name="title" id="title" class="form-control">
 
 </div>
 <div class="form-group">
-        <label for="description">Description</label>
-        <textarea name="description" id="description" class="form-control"><%=article.description%></textarea>
+        <label for="description">Meal Prep:</label>
+        <textarea required name="description" id="description" class="form-control"><%=article.description%></textarea>
 </div>
+
 <div class="form-group">
-        <label for="markdown">Markdown</label>
+        <label for="markdown">Exercises:</label>
         <textarea required name="markdown" id="markdown" class="form-control"><%= article.markdown %></textarea>
 </div>
 
