--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Demi's Travel Blog</title>
+    <title>Fitness Journal</title>
 </head>
 <body>
     <div class="container">
-        <h1 class= "mb-4">LIVE, LOVE, TRAVEL...</h1>
-        <a href="/articles/new" class="btn btn-success">Add Entry</a>
+        <h1 class= "mb-4">Weekly Food and Exercise Journal</h1>
+        <a href="/articles/new" class="btn btn-primary">Add New Day</a>
 
         <% articles.forEach(article => { %>
             <div class="card mt-4">
@@ -21,10 +21,11 @@
                       <%= article.createdAt.toLocaleDateString ()%>
                     </div>
                     <div class="card-text mb-2"><%= article.description %></div>
-                    <a href="article/<%= article.id %>" class="btn btn-primary">Read More </a>
+                    <a href="articles/<%= article.id %>" class="btn btn-primary">Read More </a>
                     <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="submit" class="btn btn-primary">Delete</button>
                     </form>
+                    
                 </div>
             </div>
         <% }) %>
