--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4">New Article</h1>
+        <h1 class="mb-4">Daily Challenge</h1>
 
         <form action="/articles" method="POST">
             <%- include('_form_fields') %>
